# MLH-PE-Hackathon-Sentinals

./: .coverage  .env.example  DECISIONS.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  QUICKREF.md  README.md  README_GHOSTLINK.md  coverage.xml  docker-compose.yml  metrics_sample.txt  pyproject.toml  pytest.ini  requirements.txt  run.py
.github/workflows/: ci.yml
alertmanager/: alertmanager.yml
app/: __init__.py  database.py
app/models/: __init__.py  event.py  health_check.py  risk_score.py  url.py  user.py
app/routes/: __init__.py  events.py  health.py  urls.py  users.py
app/services/: __init__.py  cache.py  link_health.py  risk_scorer.py  shortener.py
app/tests/: conftest.py  test_api_compat.py  test_integration.py  test_unit.py
data/: events.csv  urls.csv  users.csv
docs/: API_REFERENCE.md  CAPACITY.md  FAILURE_EDGE_CASES.md  README.md  RUNBOOK.md
grafana/dashboards/: ghostlink.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: prometheus.yml
nginx/: nginx.conf
scripts/: seed.py  setup_db.py
security/: canary_state.env
tests/: conftest.py
